# MCP-nlp2sql

./: .gitignore  README.md  dockerfile  init_project.sh  main.py  mcp_config.json  mysql_mcp_server.py  pyproject.toml  requirements.txt
app/: config.py
app/api/: auth.py  dependencies.py  routes.py
app/core/: exceptions.py
app/core/mcp/: session.py  transport.py
app/db/: database.py
app/models/: query.py  response.py
app/services/: mcp_client.py  query_service.py  sampling_service.py  schema_service.py  tool_handler.py
app/services/base/: llm_service.py
app/services/llm/: anthropic_service.py  base_tools.py  openai_service.py
app/utils/: logging.py
mysql-mcp/: README.md  pyproject.toml
mysql-mcp/src/mysql_mcp/: server.py
