[project]
name = "nlp2sql-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "anthropic>=0.40.0",
    "openai>=1.58.1",
    "fastapi>=0.115.5",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "mcp>=1.0.0",
    "sqlalchemy>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
api = "main:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]